--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ body {
         <div v-if="vm.page==0" class="instructionPage">
             <p>
                 Making the right choice when faced with multiple options can be daunting. This tool organizes and rates your options so the
-                right choice is clear. You can also <a href="https://sellfy.com/p/QEGZ/">download these detailed insrtuctions</a>.
+                right choice is clear. You can also <a href="https://sellfy.com/p/QEGZ/">download these detailed instructions</a>.
             </p>
             <h2>What decision do you want to make?</h2>
             <p>Title you decision:<br />
