corrected left edge formatting

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     <div class="container-fluid">
     </div>
-    <div class="wrapper">
+    <div class="wrapper" style="padding-left: 25px; padding-right: 10px;">
         <div class="row row-dark">
             <div class="container">
                 <div class="page-header">
