added description of the remaining biases in the app

--- a/index.html
+++ b/index.html
@@ -497,37 +497,37 @@ body {
                                                                 'url': 'https://en.wikipedia.org/wiki/Status_quo_bias',
                                                             },
                                                             {
-                                                                'label': 'confirmation bias',
+                                                                'label': 'We tend to perceive new information in ways that confirm our existing beliefs. Consider giving more weight to information that challenges your existing beliefs.',
                                                                 'id': 'confirmation',
                                                                 'url': 'http://intentionalinsights.org/how-to-protect-yourself-from-false-beliefs',
                                                                 'result': ''
                                                             },
                                                             {
-                                                                'label': 'attentional bias',
+                                                                'label': 'Our minds pay more attention to recent events and those that are powerful emotionally. Consider giving more attention to past events, and ones that are less visceral. ',
                                                                 'id': 'attention',
                                                                 'url': 'http://intentionalinsights.org/why-you-dont-think-youre-beautiful',
                                                                 'result': ''
                                                             },
                                                             {
-                                                                'label': 'overconfidence',
+                                                                'label': 'Research suggests we all tend to be overconfident to some degree or another. Consider decreasing your confidence in your envisioned outcome - how would that change your decision?',
                                                                 'id': 'overconfidence',
                                                                 'url': 'https://www.youtube.com/watch?v=UDy-T53Pie4',
                                                                 'result': ''
                                                             },
                                                             {
-                                                                'label': 'optimism bias',
+                                                                'label': 'Many people tend to be intuitively optimistic, thinking that things will turn out well and not planning for problems. If you are naturally optimistic, put more weight on considering what problems might arise and addressing risks.',
                                                                 'id': 'optimism',
                                                                 'url': 'https://en.wikipedia.org/wiki/Optimism_bias',
                                                                 'result': ''
                                                             },
                                                             {
-                                                                'label': 'pessimism bias',
+                                                                'label': 'Other people tend to be intuitively pessimistic, focusing on the problems and risks and not taking enough advantages of opportunities. If you are naturally pessimistic, consider what might be some opportunities that you might miss out on and how to take advantage of these opportunities.',
                                                                 'id': 'pessimism',
                                                                 'url': 'http://intentionalinsights.org/advice-that-works-for-anyone',
                                                                 'result': ''
                                                             },
                                                             {
-                                                                'label': 'halo and horns effect',
+                                                                'label': 'When we really like one factor of a decision option, we tend to give more positive evaluations to all other factors of that option, regardless of whether these factors deserve it (halo effect), and vice versa for when we do not like a factor (horns effect). If you really like one factor of a decision option, consider giving less positive scores to the other factors, and vice versa if you dislike a factor.',
                                                                 'id': 'haloHorns',
                                                                 'url': 'https://en.wikipedia.org/wiki/Halo_effect',
                                                                 'result': ''
