--- a/index.html
+++ b/index.html
@@ -497,40 +497,46 @@ body {
                                                                 'url': 'https://en.wikipedia.org/wiki/Status_quo_bias',
                                                             },
                                                             {
-                                                                'label': 'We tend to perceive new information in ways that confirm our existing beliefs. Consider giving more weight to information that challenges your existing beliefs.',
+                                                                'description': 'We tend to perceive new information in ways that confirm our existing beliefs. Consider giving more weight to information that challenges your existing beliefs.',
+                                                                'label': 'confirmation bias',
                                                                 'id': 'confirmation',
                                                                 'url': 'http://intentionalinsights.org/how-to-protect-yourself-from-false-beliefs',
                                                                 'result': ''
                                                             },
                                                             {
-                                                                'label': 'Our minds pay more attention to recent events and those that are powerful emotionally. Consider giving more attention to past events, and ones that are less visceral. ',
+                                                                'description': 'Our minds pay more attention to recent events and those that are powerful emotionally. Consider giving more attention to past events, and ones that are less visceral. ',
+                                                                'label': 'attention bias',
                                                                 'id': 'attention',
                                                                 'url': 'http://intentionalinsights.org/why-you-dont-think-youre-beautiful',
                                                                 'result': ''
                                                             },
                                                             {
-                                                                'label': 'Research suggests we all tend to be overconfident to some degree or another. Consider decreasing your confidence in your envisioned outcome - how would that change your decision?',
+                                                                'description': 'Research suggests we all tend to be overconfident to some degree or another. Consider decreasing your confidence in your envisioned outcome - how would that change your decision?',
+                                                                'label': 'overconfidence',
                                                                 'id': 'overconfidence',
                                                                 'url': 'https://www.youtube.com/watch?v=UDy-T53Pie4',
                                                                 'result': ''
                                                             },
                                                             {
-                                                                'label': 'Many people tend to be intuitively optimistic, thinking that things will turn out well and not planning for problems. If you are naturally optimistic, put more weight on considering what problems might arise and addressing risks.',
+                                                                'description': 'Many people tend to be intuitively optimistic, thinking that things will turn out well and not planning for problems. If you are naturally optimistic, put more weight on considering what problems might arise and addressing risks.',
+                                                                'label': 'optimism bias',
                                                                 'id': 'optimism',
                                                                 'url': 'https://en.wikipedia.org/wiki/Optimism_bias',
                                                                 'result': ''
                                                             },
                                                             {
-                                                                'label': 'Other people tend to be intuitively pessimistic, focusing on the problems and risks and not taking enough advantages of opportunities. If you are naturally pessimistic, consider what might be some opportunities that you might miss out on and how to take advantage of these opportunities.',
+                                                                'description': 'Other people tend to be intuitively pessimistic, focusing on the problems and risks and not taking enough advantages of opportunities. If you are naturally pessimistic, consider what might be some opportunities that you might miss out on and how to take advantage of these opportunities.',
+                                                                'label': 'pessimism bias',
                                                                 'id': 'pessimism',
                                                                 'url': 'http://intentionalinsights.org/advice-that-works-for-anyone',
                                                                 'result': ''
                                                             },
                                                             {
-                                                                'label': 'When we really like one factor of a decision option, we tend to give more positive evaluations to all other factors of that option, regardless of whether these factors deserve it (halo effect), and vice versa for when we do not like a factor (horns effect). If you really like one factor of a decision option, consider giving less positive scores to the other factors, and vice versa if you dislike a factor.',
+                                                                'description': 'When we really like one factor of a decision option, we tend to give more positive evaluations to all other factors of that option, regardless of whether these factors deserve it (halo effect), and vice versa for when we do not like a factor (horns effect). If you really like one factor of a decision option, consider giving less positive scores to the other factors, and vice versa if you dislike a factor.',
+                                                                'label': '',
                                                                 'id': 'haloHorns',
                                                                 'url': 'https://en.wikipedia.org/wiki/Halo_effect',
-                                                                'result': ''
+                                                                'result': 'halo and horns effect'
                                                             }
                                                         ]
                                                 },
