--- a/index.html
+++ b/index.html
@@ -533,10 +533,10 @@ body {
                                                             },
                                                             {
                                                                 'description': 'When we really like one factor of a decision option, we tend to give more positive evaluations to all other factors of that option, regardless of whether these factors deserve it (halo effect), and vice versa for when we do not like a factor (horns effect). If you really like one factor of a decision option, consider giving less positive scores to the other factors, and vice versa if you dislike a factor.',
-                                                                'label': '',
+                                                                'label': 'halo and horns effect',
                                                                 'id': 'haloHorns',
                                                                 'url': 'https://en.wikipedia.org/wiki/Halo_effect',
-                                                                'result': 'halo and horns effect'
+                                                                'result': ''
                                                             }
                                                         ]
                                                 },
