updating instructions link and html bug fix

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ body {
         <div v-if="vm.page==0" class="instructionPage">
             <p>
                 Making the right choice when faced with multiple options can be daunting. This tool organizes and rates your options so the
-                right choice is clear. You can also <a href="https://sellfy.com/p/QEGZ/">download these detailed instructions</a>.
+                right choice is clear. You can also <a href="https://disasteravoidanceexperts.com/products/download-manual-on-avoiding-disastrous-decisions/">purchase detailed instructions</a>.
             </p>
             <h2>What decision do you want to make?</h2>
             <p>Title you decision:<br />
@@ -271,7 +271,7 @@ body {
                 </tr>
                 <tr v-for="attr in vm.attributes">
                     <td><input v-model="attr.label" placeholder="attribute"></td>
-                    <td><button v-on:click="removeAttribute(attr)">remove factor</button>
+		    <td><button v-on:click="removeAttribute(attr)">remove factor</button></td>
                 </tr>
                 <tr>
                     <td>
@@ -377,7 +377,7 @@ body {
         </div>
         <div v-if="vm.page==7" class="instructionPage">
             <h1>Final thoughts</h1>
-            <p><span>These are the key research-based steps to effective decision-making for any significant decision with multiple options and attributes to consider. This applies to any area of life - professional, financial, social, romantic, civic, philanthropic, leisure, or anything else. It can be used by individuals, teams, organizations, or institutions. This should help you make the wisest possible decision toward reaching your goals!</p>
+            <p>These are the key research-based steps to effective decision-making for any significant decision with multiple options and attributes to consider. This applies to any area of life - professional, financial, social, romantic, civic, philanthropic, leisure, or anything else. It can be used by individuals, teams, organizations, or institutions. This should help you make the wisest possible decision toward reaching your goals!</p>
             <section id="typography" class="content_section html_mode">
                     <p></p>
                     <h3>Sign up for our newsletter to receive the latest updates from Intentional Insights.</h3>
@@ -404,7 +404,7 @@ body {
 <!--REACHMAIL FORM ENDS HERE-->
 <div class="clearfix"></div>
 </section>
-<p> This web app is informed by the <a href="https://sellfy.com/p/QEGZ/">Tip Sheet and Guidelines on Making Wise Decisions</a>.</p>
+<p> This web app is informed by the <a href="https://disasteravoidanceexperts.com/products/download-manual-on-avoiding-disastrous-decisions/">Tip Sheet and Guidelines on Making Wise Decisions</a>.</p>
 <p>For any questions, please contact Dr. Gleb Tsipursky, gleb@intentionalinsights.org</p>
 </div>
 </div>
@@ -704,7 +704,9 @@ body {
                                             })
 
 </script>
-
+<!-- ******************************************************************************************** -->
+			
+			
 <!--START OF REACHMAIL FORM, CUT FROM HERE DOWN-->
 <script type="text/javascript">
     function submitIt(form) {
@@ -742,7 +744,6 @@ body {
     }
 </script>
 <!--END OF JAVASCRIPT-->
-<!-- ******************************************************************************************** -->
                 </div>
             </div>
         </div>
